--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1> not My First Heading</h1>
-<p>My first paragraph. </p>
+<h1> Welcome To Mars</h1>
+<p>Be a Martian </p>
 </body>
 </html>
